--- a/consume_json_to_ui5_app/webapp/view/MyView.view.xml
+++ b/consume_json_to_ui5_app/webapp/view/MyView.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
     controllerName="READJSONTOUI5.consumejsontoui5app.controller.MyView"
     xmlns:mvc="sap.ui.core.mvc"
+    xmlns:k="sap.ui.layout"
     displayBlock="true"
     xmlns="sap.m"
 >
