--- a/ui5_fragments_nested_views/webapp/view/NestedView.view.xml
+++ b/ui5_fragments_nested_views/webapp/view/NestedView.view.xml
@@ -1,22 +1,5 @@
-<mvc:View
-    controllerName="UI5FRAGNESTVIEW.ui5fragmentsnestedviews.controller.NestedView"
-    xmlns:core="sap.ui.core"
-    xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true"
-    xmlns="sap.m"
->
-	<Shell id="shell">
-		<App id="app">
-			<pages>
-				<Page id="page" title="{i18n>title}">
-                <content>
-                   
-					</content>
-                    <headerContent>
-                    
-                    </headerContent>
-				</Page>
-			</pages>
-		</App>
-	</Shell>
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="UI5FRAGNESTVIEW.ui5fragmentsnestedviews.controller.NestedView" displayBlock="true">
+	
+<Label text="This Label is from the NestedView" width="100%" id="label0" design="Bold"/>
+	
 </mvc:View>
